# chatgpt_clone

./: .env.example  .gitignore  README.md  memory.md  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: a1b2c3d4e5f6_add_users_and_conversation_ownership.py
app/: dependencies.py  main.py
app/api/routes/: auth.py  chat.py  conversation.py
app/core/: config.py  database.py  logging.py
app/exceptions/: ai.py  auth.py  handlers.py
app/middleware/: request_id.py
app/models/: conversation.py  message.py  user.py
app/providers/: base.py  base_provider.py  fallback.py  gemini.py
app/schemas/: chat.py  conversation.py  user.py
app/services/: chat_service.py  conversation_service.py  message_service.py  user_service.py
app/utils/: sse.py
backend/: .env.example  memory.md  pyproject.toml
backend/alembic/versions/: 8f2c1a7b4d3e_create_conversations_and_messages.py  91fb21f02ffc_create_users_table.py  d2c10827e8ef_create_initial_tables.py
backend/app/: dependencies.py  main.py
backend/app/core/: circuit_breaker.py  config.py  security.py
backend/app/exceptions/: conversation.py  handlers.py
backend/app/providers/: base.py  fallback_provider.py  gemini_provider.py
backend/app/schemas/: message.py
backend/app/services/: chat_service.py  user_service.py
frontend/: README.md  package-lock.json  package.json
frontend/src/app/: error.tsx  global-error.tsx  globals.css  layout.tsx  not-found.tsx
frontend/src/config/: env.ts
frontend/src/lib/: constants.ts  format.ts
frontend/src/types/: api.ts  chat.ts
(+53 files in other folders)
