[project]
name = "chatgpt-clone"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.5",
    "bcrypt==4.3.0",
    "fastapi>=0.139.2",
    "google-genai>=2.12.1",
    "passlib[bcrypt]==1.7.4",
    "psycopg2-binary==2.9.10",
    "psycopg[binary]>=3.3.4",
    "pydantic-settings>=2.14.2",
    "python-dotenv>=1.2.2",
    "python-jose[cryptography]==3.5.0",
    "rich>=15.0.0",
    "sqlalchemy>=2.0.51",
    "tenacity==9.1.2",
    "uvicorn[standard]>=0.51.0",
]
